# YAUZ

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build.yml
.kiro/steering/: i18n.md  project.md  ui.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/lproj/en.lproj/: Localizable.strings
src-tauri/lproj/zh-Hans.lproj/: Localizable.strings
src-tauri/lproj/zh-Hant.lproj/: Localizable.strings
src-tauri/src/: lib.rs  main.rs
