[package]
name = "yauz"
version = "0.5.5"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs-next = "2"
reqwest = { version = "0.12", features = ["blocking"] }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"
windows-sys = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging"] }
